[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asymflow-audio"
version = "0.1.0"
description = "Rank-asymmetric flow matching for speech — mel-spectrogram and raw waveform (SC09, LJSpeech)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "einops>=0.7.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "omegaconf>=2.3.0",
    "wandb>=0.17.0",
    "tqdm>=4.66.0",
    "frechet-audio-distance>=0.0.4",
    "soundfile>=0.12.1",
    "librosa>=0.10.2",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/asymflow_audio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
